@@ -1580,8 +1580,10 @@ void process_table(table_input &in)
 static void usage(FILE *stream)
 {
   fprintf(stream,
-"usage: %s [-C] [file] ...\n"
-"usage: %s {-v | --version}\n", program_name, program_name);
+"usage: %s [-C] [file ...]\n"
+"usage: %s {-v | --version}\n"
+"usage: %s --help\n",
+	 program_name, program_name, program_name);
 }
 
 int main(int argc, char **argv)
